feat: add Docker support with Dockerfile, docker-compose, and environment configuration

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,5 @@ ADMIN_PASSWORD=admin123
 ADMIN_DISPLAY_NAME=Admin
 ADMIN_LANGUAGE=en
 ADMIN_SUPERADMIN=true
+DEBUG=false
+CORS_ORIGINS="http://localhost:4321,http://localhost:8000"
