--- a/.gitea/workflows/main.yml
+++ b/.gitea/workflows/main.yml
@@ -14,8 +14,8 @@ jobs:
 
       - name: Install Docker CLI
         run: |
-          apt-get update
-          apt-get install -y docker.io
+          sudo apt-get update
+          sudo apt-get install -y docker.io
 
       - name: Generate production .env file
         run: |
@@ -31,14 +31,21 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ secrets.GHCR_USERNAME }} # Gitea secret for your GHCR username
-          password: ${{ secrets.GHCR_TOKEN }}   # Gitea secret for your GHCR token
+          username: ${{ secrets.GHCR_USERNAME }}
+          password: ${{ secrets.GHCR_TOKEN }}
 
-      - name: Build and push Docker image
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and push Docker image (multi-arch)
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
+          platforms: linux/amd64,linux/arm64,linux/arm/v7
           tags: |
             ghcr.io/fire-devils/filaman-system:latest
             ghcr.io/fire-devils/filaman-system:${{ gitea.sha }}
