--- a/.gitea/workflows/main.yml
+++ b/.gitea/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
           git config user.email "actions@local"
 
           git remote remove github 2>/dev/null || true
-          git remote add github https://${{ secrets.GITHUB_TOKEN }}@github.com/Fire-Devils/filaman-system.git
+          git remote add github https://${{ secrets.GHCR_TOKEN }}@github.com/Fire-Devils/filaman-system.git
 
           # main spiegeln
           git push github HEAD:refs/heads/main --force-with-lease
