--- a/.gitea/workflows/main.yml
+++ b/.gitea/workflows/main.yml
@@ -29,10 +29,10 @@ jobs:
           git remote add github https://${{ secrets.GHCR_TOKEN }}@github.com/Fire-Devils/filaman-system.git
 
           # main spiegeln
-          git push github HEAD:refs/heads/main --force-with-lease
+          git push github HEAD:refs/heads/main --force
 
           # tags hochschieben
-          git push github --tags --force-with-lease
+          git push github --tags --force
 
           # Tag-Prune (Tags, die lokal fehlen, auf GitHub löschen)
           git fetch github --tags
