--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "build": "astro build",
+    "build": "sh -c 'echo \"export const VERSION=\\\"$(cat ../version.txt)\\\"\" > src/version.js && astro build'",
     "preview": "astro preview",
     "astro": "astro"
   },
