--- a/.gitea/workflows/main.yml
+++ b/.gitea/workflows/main.yml
@@ -72,8 +72,7 @@ jobs:
           tag_name: v${{ steps.version.outputs.new_version }}
           name: Release v${{ steps.version.outputs.new_version }}
           generate_release_notes: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GHCR_TOKEN }}
+          token: ${{ secrets.GHCR_TOKEN }}
 
       - name: Install Docker CLI
         run: |
