--- a/.gitea/workflows/main.yml
+++ b/.gitea/workflows/main.yml
@@ -53,14 +53,42 @@ jobs:
           git push github HEAD:refs/heads/main --force
           git push github "v$NEW_VERSION" --force
 
-      - name: Create GitHub Release
-        uses: softprops/action-gh-release@v1
+      - name: Install jq
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y jq
+
+      - name: Create GitHub Release (API)
+        shell: bash
         env:
-          GITHUB_TOKEN: ${{ secrets.GHCR_TOKEN }}
-        with:
-          tag_name: v${{ steps.version.outputs.new_version }}
-          name: Release v${{ steps.version.outputs.new_version }}
-          generate_release_notes: true
+          GH_TOKEN: ${{ secrets.GHCR_TOKEN }}
+          TAG: v${{ steps.version.outputs.new_version }}
+        run: |
+          set -eu
+
+          # Release anlegen (idempotent: wenn schon vorhanden -> kein harter Fail)
+          payload="$(jq -n \
+            --arg tag "$TAG" \
+            --arg name "Release $TAG" \
+            '{ tag_name: $tag, name: $name, generate_release_notes: true, draft: false, prerelease: false }')"
+
+          code="$(curl -sS -o resp.json -w "%{http_code}" \
+            -H "Authorization: token $GH_TOKEN" \
+            -H "Accept: application/vnd.github+json" \
+            https://api.github.com/repos/Fire-Devils/filaman-system/releases \
+            -d "$payload")"
+
+          if [ "$code" = "201" ]; then
+            echo "Release created."
+            cat resp.json
+          elif [ "$code" = "422" ]; then
+            echo "Release already exists (422)."
+            cat resp.json
+          else
+            echo "GitHub API error HTTP $code"
+            cat resp.json
+            exit 1
+          fi
 
       - name: Install Docker CLI
         run: |
