--- a/.gitea/workflows/main.yml
+++ b/.gitea/workflows/main.yml
@@ -95,6 +95,21 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y docker.io
 
+      - name: Generate production .env file
+        run: |
+          echo "DEBUG=false" > .env
+          echo "CORS_ORIGINS=*" >> .env
+          echo "SECRET_KEY=$(openssl rand -hex 32)" >> .env
+          echo "CSRF_SECRET_KEY=$(openssl rand -hex 32)" >> .env
+          echo "DATABASE_URL=sqlite+aiosqlite:////app/data/filaman.db" >> .env
+          echo "ADMIN_EMAIL=admin@example.com" >> .env
+          echo "ADMIN_PASSWORD=admin123" >> .env
+          echo "ADMIN_DISPLAY_NAME=Admin" >> .env
+          echo "ADMIN_LANGUAGE=en" >> .env
+          echo "ADMIN_SUPERADMIN=true" >> .env
+          echo "Generated .env file for build:"
+          cat .env
+
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
