feat: erweitere Datenbankkonfiguration und füge Unterstützung für MySQL und PostgreSQL hinzu; aktualisiere Backup-Skript für externe Datenbanken

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,42 @@
+# ===========================================
+# Database Configuration
+# ===========================================
+
+# SQLite (default - file-based, backup included in container)
 DATABASE_URL=sqlite+aiosqlite:///./filaman.db
+
+# MySQL (external database - backup handled by admin)
+# DATABASE_URL=aiomysql://username:password@hostname:3306/database
+
+# PostgreSQL (external database - backup handled by admin)
+# DATABASE_URL=asyncpg://username:password@hostname:5432/database
+
+# ===========================================
+# Security
+# ===========================================
+# Generate secure keys with: openssl rand -hex 32
 SECRET_KEY=change-me-in-production
 CSRF_SECRET_KEY=change-me-in-production
+
+# ===========================================
+# Admin User (optional - creates default admin)
+# ===========================================
 ADMIN_EMAIL=admin@example.com
 ADMIN_PASSWORD=admin123
 ADMIN_DISPLAY_NAME=Admin
 ADMIN_LANGUAGE=en
 ADMIN_SUPERADMIN=true
+
+# ===========================================
+# Application Settings
+# ===========================================
 DEBUG=false
-CORS_ORIGINS="http://localhost:4321,http://localhost:8000"
+CORS_ORIGINS=http://localhost:4321,http://localhost:8000
+
+# ===========================================
+# Logging
+# ===========================================
+# Log level: DEBUG, INFO, WARNING, ERROR, CRITICAL
+LOG_LEVEL=INFO
+# Log format: text or json
+LOG_FORMAT=text
