--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "aiosqlite>=0.19.0",
     "aiomysql>=0.2.0",
     "asyncpg>=0.29.0",
+    "psycopg2-binary>=2.9.0",
     "python-json-logger>=2.0.0",
     "httpx>=0.26.0",
 ]
