fix: aktualisiere Datenbank-URLs in .env.example und docker-compose.yml für konsistente Konfiguration

--- a/.env.example
+++ b/.env.example
@@ -3,13 +3,13 @@
 # ===========================================
 
 # SQLite (default - file-based, backup included in container)
-DATABASE_URL=sqlite+aiosqlite:///./filaman.db
+DATABASE_URL=sqlite+aiosqlite:///app/data/filaman.db
 
 # MySQL (external database - backup handled by admin)
-# DATABASE_URL=aiomysql://username:password@hostname:3306/database
+# DATABASE_URL=mysql+aiomysql://user:pass@host:3306/dbname
 
 # PostgreSQL (external database - backup handled by admin)
-# DATABASE_URL=asyncpg://username:password@hostname:5432/database
+# DATABASE_URL=postgresql+asyncpg://username:password@hostname:3306/database
 
 # ===========================================
 # Security
@@ -31,7 +31,7 @@ ADMIN_SUPERADMIN=true
 # Application Settings
 # ===========================================
 DEBUG=false
-CORS_ORIGINS=http://localhost:4321,http://localhost:8000
+CORS_ORIGINS=*
 
 # ===========================================
 # Logging
