--- a/.gitea/workflows/main.yml
+++ b/.gitea/workflows/main.yml
@@ -14,17 +14,12 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Calculate new version
+      - name: Get version from version.txt
         id: version
         shell: bash
         run: |
           set -eu
-          VERSION="$(cat version.txt)"
-          MAJOR="$(echo "$VERSION" | cut -d. -f1)"
-          MINOR="$(echo "$VERSION" | cut -d. -f2)"
-          PATCH="$(echo "$VERSION" | cut -d. -f3)"
-          NEW_PATCH=$((PATCH + 1))
-          NEW_VERSION="$MAJOR.$MINOR.$NEW_PATCH"
+          NEW_VERSION="$(cat version.txt | tr -d ' \n')"
           echo "new_version=$NEW_VERSION" >> "$GITHUB_OUTPUT"
 
       - name: Bump version, create tag, push to Gitea + GitHub
